modification in homepage and tour guide reg

--- a/src/.env
+++ b/src/.env
@@ -1,20 +1,20 @@
-CEYLON_ASSISTANT_FIREBASE_API_KEY = AIzaSyD6wDMvKeUmt5nzf75baXlTSnQszVgGmMI,
-CEYLON_ASSISTANT_FIREBASE_AUTH_DOMAIN = ceylon-assistant.firebaseapp.com,
-CEYLON_ASSISTANT_FIREBASE_PROJECT_ID = ceylon-assistant,
-CEYLON_ASSISTANT_FIREBASE_STORAGE_BUCKET = ceylon-assistant.appspot.com,
-CEYLON_ASSISTANT_FIREBASE_MESSAGING_SENDER_ID = 1085508934061,
-CEYLON_ASSISTANT_FIREBASE_APP_ID = 1:1085508934061:web:e423c65b464578e0eb2924
+REACT_APP_FIREBASE_API_KEY = "AIzaSyD6wDMvKeUmt5nzf75baXlTSnQszVgGmMI",
+REACT_APP_FIREBASE_AUTH_DOMAIN = "ceylon-assistant.firebaseapp.com",
+REACT_APP_FIREBASE_PROJECT_ID = "ceylon-assistant",
+REACT_APP_FIREBASE_STORAGE_BUCKET = "ceylon-assistant.appspot.com",
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID = "1085508934061",
+REACT_APP_FIREBASE_APP_ID = "1:1085508934061:web:0c961e457e54157ceb2924"
 
-import {db } from '../../../Firebase';
-import {collection,getDocs} from 'firebase/firestore'
+// import {db } from '../../../Firebase';
+// import {collection,getDocs} from 'firebase/firestore'
 
-const[users,setUsers] = useState([]);
+// const[users,setUsers] = useState([]);
 
-    const usersCollectionRef = collection(db, "users")
+//     const usersCollectionRef = collection(db, "users")
 
-    useEffect(()=>{
-        const getUsers = async ()=>{
-            const data = await getDocs(usersCollectionRef);
-            setUsers(data.docs.map((doc)=>({...doc.data()})))
-        }
-    },[])
+//     useEffect(()=>{
+//         const getUsers = async ()=>{
+//             const data = await getDocs(usersCollectionRef);
+//             setUsers(data.docs.map((doc)=>({...doc.data()})))
+//         }
+//     },[])
