--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "env-cmd": "^10.1.0",
     "firebase": "^9.8.4",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
