--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux-firestore": "^1.0.0",
+    "sass": "^1.55.0",
     "styled-components": "^5.3.5",
+    "swiper": "^8.4.4",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
