--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.15",
     "redux-firestore": "^1.0.0",
     "sass": "^1.55.0",
     "styled-components": "^5.3.5",
