--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "date-fns": "^2.29.2",
     "dayjs": "^1.11.5",
     "env-cmd": "^10.1.0",
-    "firebase": "^9.8.4",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -32,6 +31,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.0",
     "recharts": "^2.1.15",
     "redux-firestore": "^1.0.0",
     "sass": "^1.55.0",
